# ConCluster

./: CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  docker_test_suite.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-single-platform.yml
examples/: CMakelists.txt
examples/simple-tcp/: README.md  main.c
examples/simple-tcp/include/: cluster_manager.h
examples/simple-tcp/src/: cluster_manager.c
examples/utils/src/: socker_handler.c  socket_handler.c  thread_handler.c
include/: actions.h  address.h  background_tasks.h  cluster.h  contacts.h  id.h  node.h  role.h  servers.h  single_server.h  socket_handler.h  thread_handler.h
include/node/: actions.h  address.h  background_tasks.h  contacts.h  id.h  node.h  role.h  servers.h  single_server.h
src/: actions.c  address.c  background_tasks.c  cluster.c  contacts.c  id.c  node.c  role.c  servers.c  single_server.c  socket_handler.c
src/node/: actions.c  address.c  background_tasks.c  contacts.c  id.c  node.c  role.c  servers.c  single_server.c
test/: CMakeLists.txt  actions_test.cc  address_test.cc  background_tasks_test.cc  cluster_test.cc  contacts_test.cc  id_test.cc  node_test.cc  role_test.cc  server_test.cc  servers_test.cc  single_server_test.cc  socket_handler_test.cc  test.cc  thread_handler_test.cc
test/src/: actions_test.cc  address_test.cc  background_tasks_test.cc  cluster_test.cc  contacts_test.cc  id_test.cc  node_test.cc  role_test.cc  servers_test.cc  single_server_test.cc
